Switches to webpack, adds `twine2micro.js` converter.
Webpack is a little nicer than browserify, it seems.

`twine2micro.js` will parse a Twine 2 HTML file and emit story files
for this engine.

--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 <html>
 <head>
   <style href="css/min.min.css"></style>
-  <script src="js/build.js" type="text/javascript"></script>
+  <script src="build.js" type="text/javascript"></script>
 </head>
 <body>
   <div class="nav" tabindex="-1" onclick="this.focus()">
     <div class="container">
-      <a class="pagename current" href="#">Min</a>
+      Loading...
+
+<!--       <a class="pagename current" href="#">Min</a>
       <a href="#">One</a>
       <a href="#">Two</a>
       <a href="#">Three</a>
-    </div>
+ -->    </div>
   </div>
   <div class="content">
   </div>
