--- a/index.html
+++ b/index.html
@@ -1,20 +1,23 @@
 <html>
 <head>
-  <style href="css/min.min.css"></style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link href="css/min.min.css" rel="stylesheet">
+  <link href="css/main.css" rel="stylesheet">
+
   <script src="build.js" type="text/javascript"></script>
 </head>
 <body>
-  <div class="nav" tabindex="-1" onclick="this.focus()">
-    <div class="container">
-      Loading...
-
-<!--       <a class="pagename current" href="#">Min</a>
-      <a href="#">One</a>
-      <a href="#">Two</a>
-      <a href="#">Three</a>
- -->    </div>
-  </div>
-  <div class="content">
+  <!-- <div class="nav" tabindex="-1" onclick="this.focus()"> -->
+  <div class="container">
+    <div class="row">
+      <div class="col c3">&nbsp;</div>
+      <div class="content col c6">
+        Loading...
+      </div>
+      <div class="col c3">&nbsp;</div>
+    </div>
   </div>
 </body>
 </html>
