Improvements. Text fades in, can delay hide/unhide.

--- a/index.html
+++ b/index.html
@@ -12,11 +12,20 @@
   <!-- <div class="nav" tabindex="-1" onclick="this.focus()"> -->
   <div class="container">
     <div class="row">
-      <div class="col c3">&nbsp;</div>
-      <div class="content col c6">
+      <div class="col c3 spacer">&nbsp;</div>
+      <div class="col c6 game-title">
+        <div style="float: left">Whistler's Motive</div>
+        <div style="float: right"><a href='javascript:restart()'>Restart</a></div>
+      </div>
+      <div class="col c3 spacer">&nbsp;</div>
+    </div>
+
+    <div class="row">
+      <div class="col c3 spacer">&nbsp;</div>
+      <div class="col c6 content">
         Loading...
       </div>
-      <div class="col c3">&nbsp;</div>
+      <div class="col c3 spacer">&nbsp;</div>
     </div>
   </div>
 </body>
