--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
+  <title>Whistler's Motive (js13k)</title>
+
   <link href="css/min.min.css" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
 
